--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -14,6 +14,7 @@ rtree = "^1.2"
 matplotlib = "^3.8"
 jupyterlab = "^4.0"
 jupyter = "^1.1.1"
+sqlalchemy = "^2.0.40"
 
 [build-system]
 requires = ["poetry-core"]
