--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,6 +15,8 @@ matplotlib = "^3.8"
 jupyterlab = "^4.0"
 jupyter = "^1.1.1"
 sqlalchemy = "^2.0.40"
+pyogrio = "^0.10.0"
+pyarrow = "^19.0.1"
 
 [build-system]
 requires = ["poetry-core"]
